--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="slideImage">SlideImage</string>
     <string name="todo">eo_rew</string>
     <string name="back_todo">TODO</string>
-    <string name="userName">Pulak Das</string>
+    <string name="userName">User Name</string>
     <string name="mobileDevelopment">Here is a step-by-step roadmap for full stack native Android app development:
 1) Choose an app idea and Create a plan:
 Brainstorm app ideas
